--- a/public/index.html
+++ b/public/index.html
@@ -9,43 +9,34 @@
 </head>
 <body>
 <div class="container">
-    <h1>booty-grid demo</h1>
+    <h1>booty-grid demos</h1>
 
-    <h3>Render a table</h3>
+    <div id="demos"></div>
 
-    <h4>Code</h4>
-
-        <pre>
-            var grid = new Grid();
-            grid.render();
-        </pre>
-
-    <h4>Output</h4>
-    <div id="output-demo-1"></div>
 
     <div>
-    <table class="table table-bordered table-header" style="margin-top: 50px">
-        <thead>
-        <tr>
-            <th class="col-xs-4">Column 1</th>
-            <th class="col-xs-4">Column 2</th>
-            <th class="col-xs-4">Column 3</th>
+        <table class="table table-bordered table-header" style="margin-top: 50px">
+            <thead>
+            <tr>
+                <th class="col-xs-4">Column 1</th>
+                <th class="col-xs-4">Column 2</th>
+                <th class="col-xs-4">Column 3</th>
 
-        </tr>
-        </thead>
-    </table>
+            </tr>
+            </thead>
+        </table>
     </div>
     <div style="height: 200px; overflow-y: auto">
         <table class="table table-bordered table-body">
             <!--<thead>-->
             <!--<tr>-->
-                <!--<th class="col-xs-1">Column 1</th>-->
-                <!--<th class="col-xs-2">Column 2</th>-->
-                <!--<th class="col-xs-3">Column 3</th>-->
-                <!--<th class="col-xs-1">Column 4</th>-->
-                <!--<th class="col-xs-1">Column 5</th>-->
-                <!--<th class="col-xs-2">Column 6</th>-->
-                <!--<th class="col-xs-2">Column 7</th>-->
+            <!--<th class="col-xs-1">Column 1</th>-->
+            <!--<th class="col-xs-2">Column 2</th>-->
+            <!--<th class="col-xs-3">Column 3</th>-->
+            <!--<th class="col-xs-1">Column 4</th>-->
+            <!--<th class="col-xs-1">Column 5</th>-->
+            <!--<th class="col-xs-2">Column 6</th>-->
+            <!--<th class="col-xs-2">Column 7</th>-->
             <!--</tr>-->
             <!--</thead>-->
             <tbody>
@@ -62,36 +53,36 @@
 
             </tr>
             <!--<tr>-->
-                <!--<td>Column 1</td>-->
-                <!--<td>Column 2</td>-->
-                <!--<td>Column 3</td>-->
+            <!--<td>Column 1</td>-->
+            <!--<td>Column 2</td>-->
+            <!--<td>Column 3</td>-->
 
             <!--</tr>-->
             <!--<tr>-->
-                <!--<td>Column 1</td>-->
-                <!--<td>Column 2</td>-->
-                <!--<td>Column 3</td>-->
+            <!--<td>Column 1</td>-->
+            <!--<td>Column 2</td>-->
+            <!--<td>Column 3</td>-->
 
             <!--</tr>-->
             <!--<tr>-->
-                <!--<td>Column 1</td>-->
-                <!--<td>Column 2</td>-->
-                <!--<td>Column 3</td>-->
-                <!--<td>Column 4</td>-->
+            <!--<td>Column 1</td>-->
+            <!--<td>Column 2</td>-->
+            <!--<td>Column 3</td>-->
+            <!--<td>Column 4</td>-->
 
             <!--</tr>-->
             <!--<tr>-->
-                <!--<td>Column 1</td>-->
-                <!--<td>Column 2</td>-->
-                <!--<td>Column 3</td>-->
-                <!--<td>Column 4</td>-->
+            <!--<td>Column 1</td>-->
+            <!--<td>Column 2</td>-->
+            <!--<td>Column 3</td>-->
+            <!--<td>Column 4</td>-->
 
             <!--</tr>-->
             <!--<tr>-->
-                <!--<td>Column 1</td>-->
-                <!--<td>Column 2</td>-->
-                <!--<td>Column 3</td>-->
-                <!--<td>Column 4</td>-->
+            <!--<td>Column 1</td>-->
+            <!--<td>Column 2</td>-->
+            <!--<td>Column 3</td>-->
+            <!--<td>Column 4</td>-->
 
             <!--</tr>-->
             </tbody>
@@ -99,7 +90,7 @@
     </div>
 
     <script type="application/javascript">
-        $('.table-header').width($('.table-body').width()+2);
+        $('.table-header').width($('.table-body').width() + 2);
 
     </script>
 
