--- a/public/index.html
+++ b/public/index.html
@@ -14,85 +14,85 @@
     <div id="demos"></div>
 
 
-    <div>
-        <table class="table table-bordered table-header" style="margin-top: 50px">
-            <thead>
-            <tr>
-                <th class="col-xs-4">Column 1</th>
-                <th class="col-xs-4">Column 2</th>
-                <th class="col-xs-4">Column 3</th>
-
-            </tr>
-            </thead>
-        </table>
-    </div>
-    <div style="height: 200px; overflow-y: auto">
-        <table class="table table-bordered table-body">
+    <!--<div>-->
+        <!--<table class="table table-bordered table-header" style="margin-top: 50px">-->
             <!--<thead>-->
             <!--<tr>-->
-            <!--<th class="col-xs-1">Column 1</th>-->
-            <!--<th class="col-xs-2">Column 2</th>-->
-            <!--<th class="col-xs-3">Column 3</th>-->
-            <!--<th class="col-xs-1">Column 4</th>-->
-            <!--<th class="col-xs-1">Column 5</th>-->
-            <!--<th class="col-xs-2">Column 6</th>-->
-            <!--<th class="col-xs-2">Column 7</th>-->
+                <!--<th class="col-xs-4">Column 1</th>-->
+                <!--<th class="col-xs-4">Column 2</th>-->
+                <!--<th class="col-xs-4">Column 3</th>-->
+
             <!--</tr>-->
             <!--</thead>-->
-            <tbody>
-            <tr>
-                <td class="col-xs-4">a</td>
-                <td class="col-xs-4">b</td>
-                <td class="col-xs-4">c</td>
-
-            </tr>
-            <tr>
-                <td>a</td>
-                <td>b</td>
-                <td>c</td>
-
-            </tr>
+        <!--</table>-->
+    <!--</div>-->
+    <!--<div style="height: 200px; overflow-y: auto">-->
+        <!--<table class="table table-bordered table-body">-->
+            <!--&lt;!&ndash;<thead>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-1">Column 1</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-2">Column 2</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-3">Column 3</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-1">Column 4</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-1">Column 5</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-2">Column 6</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;<th class="col-xs-2">Column 7</th>&ndash;&gt;-->
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;</thead>&ndash;&gt;-->
+            <!--<tbody>-->
             <!--<tr>-->
-            <!--<td>Column 1</td>-->
-            <!--<td>Column 2</td>-->
-            <!--<td>Column 3</td>-->
+                <!--<td class="col-xs-4">a</td>-->
+                <!--<td class="col-xs-4">b</td>-->
+                <!--<td class="col-xs-4">c</td>-->
 
             <!--</tr>-->
             <!--<tr>-->
-            <!--<td>Column 1</td>-->
-            <!--<td>Column 2</td>-->
-            <!--<td>Column 3</td>-->
+                <!--<td>a</td>-->
+                <!--<td>b</td>-->
+                <!--<td>c</td>-->
 
             <!--</tr>-->
-            <!--<tr>-->
-            <!--<td>Column 1</td>-->
-            <!--<td>Column 2</td>-->
-            <!--<td>Column 3</td>-->
-            <!--<td>Column 4</td>-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 1</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 2</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 3</td>&ndash;&gt;-->
 
-            <!--</tr>-->
-            <!--<tr>-->
-            <!--<td>Column 1</td>-->
-            <!--<td>Column 2</td>-->
-            <!--<td>Column 3</td>-->
-            <!--<td>Column 4</td>-->
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 1</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 2</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 3</td>&ndash;&gt;-->
 
-            <!--</tr>-->
-            <!--<tr>-->
-            <!--<td>Column 1</td>-->
-            <!--<td>Column 2</td>-->
-            <!--<td>Column 3</td>-->
-            <!--<td>Column 4</td>-->
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 1</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 2</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 3</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 4</td>&ndash;&gt;-->
 
-            <!--</tr>-->
-            </tbody>
-        </table>
-    </div>
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 1</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 2</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 3</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 4</td>&ndash;&gt;-->
 
-    <script type="application/javascript">
-        $('.table-header').width($('.table-body').width() + 2);
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 1</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 2</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 3</td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<td>Column 4</td>&ndash;&gt;-->
 
-    </script>
+            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
+            <!--</tbody>-->
+        <!--</table>-->
+    <!--</div>-->
+
+    <!--<script type="application/javascript">-->
+        <!--$('.table-header').width($('.table-body').width() + 2);-->
+
+    <!--</script>-->
 
 </div>
 
