grunt task for building min standalone version

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
 <div class="container">
     <h1>booty-grid demos</h1>
 
+    <h2>Production Source</h2>
+    <ul>
+        <li><a href="dist/booty_grid.min.js">Javascript (window global variable - BootyGrid)</a></li>
+        <li><a href="dist/booty_grid.min.css">CSS</a></li>
+    </ul>
+
     <div id="demos"></div>
 
 </div>
