--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 </head>
 <body>
 <div class="container">
+    <a class="github" href="https://github.com/skinnybrit51/booty-grid">Star Me<img src="images/octocat.png"/></a>
     <h1>booty-grid demos</h1>
 
     <h2>Production Source</h2>
