--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <meta name="author" content="skinnybrit51">
 <meta name="description" content="Booty-grid demos page.">
 <meta name="keywords" content="JavaScript, HTML, Bootstrap, Grid, Table">
+<meta name="robots" content="noodp, nosnippet">
+<meta name="googlebot" content="noodp, nosnippet">
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
