update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <title>booty-grid</title>
 <meta name="author" content="skinnybrit51">
-<meta name="description" content="Booty-grid demos page.">
+<meta name="description" content="Bootstrap table with CRUD functionality.  Demo Page.">
 <meta name="keywords" content="JavaScript, HTML, Bootstrap, Grid, Table">
-<meta name="robots" content="noodp, nosnippet">
-<meta name="googlebot" content="noodp, nosnippet">
+<meta name="robots" content="NOODP">
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
