--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>booty-grid</title>
+<title>editable-grid</title>
 <meta name="author" content="skinnybrit51">
 <meta name="description" content="Bootstrap table with CRUD functionality.  Demo Page.">
 <meta name="keywords" content="JavaScript, HTML, Bootstrap, Grid, Table">
@@ -24,7 +24,7 @@
 <head>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="grid.css"/>
-    <script type="application/javascript" src="bootstrap-booty-grid.js"></script>
+    <script type="application/javascript" src="bootstrap-editable-grid.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet/less" type="text/css" href="index.less"/>
@@ -32,13 +32,13 @@
 </head>
 <body>
 <div class="container">
-    <a class="github" href="https://github.com/skinnybrit51/booty-grid">Star Me<img src="images/octocat.png"/></a>
-    <h1>booty-grid demos</h1>
+    <a class="github" href="https://github.com/skinnybrit51/editable-grid">Star Me<img src="images/octocat.png"/></a>
+    <h1>editable-grid demos</h1>
 
     <h2>Production Source</h2>
     <ul>
-        <li><a href="dist/booty_grid.min.js">Javascript (window global variable - BootyGrid)</a></li>
-        <li><a href="dist/booty_grid.min.css">CSS</a></li>
+        <li><a href="dist/editable.min.js">Javascript (window global variable - EditableGrid)</a></li>
+        <li><a href="dist/editable.min.css">CSS</a></li>
     </ul>
 
     <div id="demos"></div>
