update dist links

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
 
     <h2>Production Source</h2>
     <ul>
-        <li><a href="dist/editable.min.js">Javascript (window global variable - EditableGrid)</a></li>
-        <li><a href="dist/editable.min.css">CSS</a></li>
+        <li><a href="dist/editable_grid.min.js">Javascript (window global variable - EditableGrid)</a></li>
+        <li><a href="dist/editable_grid.min.css">CSS</a></li>
     </ul>
 
     <div id="demos"></div>
